[gd_scene load_steps=5 format=3 uid="uid://5upqx8dlpdkc"]

[ext_resource type="Script" path="res://objects/enemy/base/enemy_base.gd" id="1_a83my"]

[sub_resource type="Animation" id="Animation_8ij00"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8jou8"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1lnpi"]
_data = {
"RESET": SubResource("Animation_8ij00"),
"death": SubResource("Animation_8jou8")
}

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_a83my")

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Animation" type="AnimatedSprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1lnpi")
}

[node name="ChaseZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CatchZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[connection signal="body_entered" from="ChaseZone" to="." method="_on_chase_zone_body_entered"]
[connection signal="body_entered" from="CatchZone" to="." method="_on_catch_zone_body_entered"]
